Avoid animation flicker

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@ body, html {
 body {
 	height: 100%;
 	font-family: 'Slabo 27px', serif;
+	display: none;
 }
 
 h1, h2 {
